2021-06-11  Diego Pino Garcia  <dpino@igalia.com>

        [GTK] Test css3/filters/composited-during-animation-layertree.html is flaky since r214292
        https://bugs.webkit.org/show_bug.cgi?id=171600

        Reviewed by Adrian Perez de Castro.

        The general baseline for this test was empty. Updated it with the
        results of iOS. I also removed the test failure from iOS TestExpectations.

        The test is marked as flaky in Mac because sometimes it produces empty
        results (webkit.org/b/95622). I don't touch the Mac baseline and leave
        the test as flaky in Mac TestExpectations.

        Finally, I moved the current baseline that exists for WPE to GLIB, as
        WebKitGTK produces the same results.

        * css3/filters/composited-during-animation-layertree-expected.txt:
        * platform/glib/css3/filters/composited-during-animation-layertree-expected.txt: Renamed from LayoutTests/platform/wpe/css3/filters/composited-during-animation-layertree-expected.txt.
        * platform/gtk/TestExpectations:
        * platform/ios/TestExpectations:

2021-06-11  Kimmo Kinnunen  <kkinnunen@apple.com>

        WebGL context image buffer accumulates the NativeImage contents when drawn to RemoteImageBufferProxy
        https://bugs.webkit.org/show_bug.cgi?id=226813
        <rdar://77421966>

        Reviewed by Simon Fraser.

        Add a test that should crash on some devices with low
        memory limits.

        * webgl/draw-webgl-to-context2d-memory-test-expected.txt: Added.
        * webgl/draw-webgl-to-context2d-memory-test.html: Added.

2021-06-10  Sam Weinig  <weinig@apple.com>

        Nothing is keeping navigator.xr alive during GC
        https://bugs.webkit.org/show_bug.cgi?id=226898

        Reviewed by Chris Dumez.

        Add test that ensure the navigator.xr wrapper is kept alive when it has
        custom properties. 

        * webxr: Added.
        * webxr/gc-expected.txt: Added.
        * webxr/gc.html: Added.
