@@ -1,7 +1,7 @@
 Test EventSource constructor functionality. Should print a series of PASS messages followed by DONE.
 
 PASS: missing argument to EventSource constructor resulted in an exception (TypeError: Not enough arguments)
-PASS: passing an empty string to the EventSource constructor resulted in an exception (SyntaxError: The string did not match the expected pattern.)
+PASS: no exception when passing an empty string to the EventSource constructor
 PASS: passing an invalid URL to the EventSource constructor resulted in an exception (SyntaxError: The string did not match the expected pattern.)
 PASS: no exception when passing a second argument to the EventSource constructor
 DONE
